chore: add biomejs

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "sketches",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.8.0",
-    "canvas-sketch": "^0.7.7",
-    "canvas-sketch-cli": "^1.15.0",
-    "tsify": "^5.0.4",
-    "typescript": "^5.6.3"
-  }
+	"name": "sketches",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^22.8.0",
+		"canvas-sketch": "^0.7.7",
+		"canvas-sketch-cli": "^1.15.0",
+		"tsify": "^5.0.4",
+		"typescript": "^5.6.3"
+	}
 }
