--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
-	"name": "sketches",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@types/node": "^22.8.0",
-		"canvas-sketch": "^0.7.7",
-		"canvas-sketch-cli": "^1.15.0",
-		"tsify": "^5.0.4",
-		"typescript": "^5.6.3"
-	}
+  "name": "p5-next",
+  "version": "0.1.2",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "new:sketch:fullscreen": "hygen fullscreen new --name",
+    "new:sketch:square": "hygen square new --name",
+    "new:sketch:a4": "hygen a4 new --name",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^2.3.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "date-fns": "^2.29.2",
+    "framer-motion": "^7.2.1",
+    "fuse.js": "^6.6.2",
+    "lodash": "^4.17.21",
+    "next": "12.2.5",
+    "nice-color-palettes": "^3.0.0",
+    "p5": "^1.4.2",
+    "p5.drawer": "^2.0.0",
+    "p5.js-svg": "^1.3.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-p5": "^1.3.30"
+  },
+  "devDependencies": {
+    "@types/node": "18.7.15",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.23.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "hygen": "6.2.8",
+    "typescript": "4.8.2"
+  }
 }
