--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,30 @@
 {
-	"compilerOptions": {
-		"lib": ["ES6", "DOM"],
-		"target": "ES6",
-		"noEmit": true,
-		"allowImportingTsExtensions": true
-	}
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["src/components/*"],
+      "hooks/*": ["src/hooks/*"],
+      "pages/*": ["src/pages/*"],
+      "sketches/*": ["src/sketches/*"],
+      "theme/*": ["src/theme/*"],
+      "types/*": ["src/types/*"],
+      "util/*": ["src/util/*"]
+    }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
