--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "p5.js-svg": "^1.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-p5": "^1.3.30"
   },
   "devDependencies": {
