--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "singleQuote": true,
+  "printWidth": 120,
   "trailingComma": "es5",
-  "semi": false,
+  "singleQuote": true,
+  "endOfLine": "lf",
   "arrowParens": "avoid"
 }
