--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "new:sketch:square": "hygen square new --name",
     "new:sketch:a4": "hygen a4 new --name",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.1",
