--- a/package.json
+++ b/package.json
@@ -14,30 +14,34 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.3.1",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "date-fns": "^2.29.2",
-    "framer-motion": "^7.2.1",
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@react-p5/core": "^1.2.0",
+    "@react-p5/sketch": "^0.2.0",
+    "@react-p5/utils": "^0.2.0",
+    "date-fns": "^2.29.3",
+    "framer-motion": "^10.10.0",
     "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
-    "next": "12.2.5",
-    "p5": "^1.4.2",
+    "next": "13.2.4",
+    "nice-color-palettes": "^3.0.0",
+    "p5": "^1.6.0",
     "p5.drawer": "^2.0.0",
-    "p5.js-svg": "^1.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0",
-    "react-p5": "^1.3.30"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.15",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "hygen": "6.2.8",
-    "typescript": "4.8.2"
+    "@types/lodash": "^4.14.192",
+    "@types/node": "18.15.11",
+    "@types/p5": "^1.6.0",
+    "@types/react": "18.0.33",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.2.4",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "hygen": "6.2.11",
+    "typescript": "5.0.3"
   }
 }
