--- a/package.json
+++ b/package.json
@@ -14,17 +14,9 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.5",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "date-fns": "^2.29.3",
-    "framer-motion": "^10.10.0",
     "fuse.js": "^6.6.2",
-    "lodash": "^4.17.21",
     "next": "13.2.4",
-    "nice-color-palettes": "^3.0.0",
     "p5": "^1.6.0",
-    "p5.drawer": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0"
@@ -35,10 +27,9 @@
     "@types/p5": "^1.6.0",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "hygen": "6.2.11",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.0.3"
   }
 }
