--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.14.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "5.0.3"
