--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-  "extends": ["next", "next/core-web-vitals"],
-  "plugins": ["simple-import-sort"],
-  "rules": {
-    "simple-import-sort/imports": "error",
-    "react/no-unescaped-entities": 0
-  }
+  "extends": "next/core-web-vitals"
 }
